# aura-harness

./: .commit-msg.txt  .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.render  README.md  deny.toml  rust-toolchain.toml
crates/aura-agent/: Cargo.toml
crates/aura-agent-kernel/: Cargo.toml
crates/aura-agent-kernel/src/: billing.rs  lib.rs  router.rs  spawn_hook.rs
crates/aura-agent-kernel/src/context/: mod.rs  tests.rs
crates/aura-agent-kernel/src/kernel/: mod.rs  process.rs  reason.rs  stream.rs  tests.rs
crates/aura-agent-kernel/src/policy/: config.rs  mod.rs
crates/aura-agent-kernel/tests/: invariant_determinism.rs  replay_round_trip.rs
crates/aura-agent-loop/: Cargo.toml
crates/aura-agent-loop/src/: lib.rs
crates/aura-agent-steering/: Cargo.toml
crates/aura-agent-steering/src/: early_oracle.rs  helpers.rs  implement_now.rs  inject.rs  lib.rs  registry.rs  repeated_read.rs  types.rs
crates/aura-agent-steering/src/registry/: registry_tests.rs
crates/aura-agent-subagent/: Cargo.toml
crates/aura-agent-subagent/src/: adapters.rs  derivation.rs  errors.rs  lib.rs  manifest.rs  overrides.rs  parent.rs  registry.rs  spec.rs  tests.rs
crates/aura-agent/src/: budget.rs  console.rs  constants.rs  dup_audit.rs  event_sequence_tests.rs  git.rs  helpers.rs  kernel_gateway.rs  lib.rs  planning.rs  recording_stream.rs  sanitize.rs  session_bootstrap.rs  task_context.rs  turn_config.rs  types.rs
crates/aura-agent/src/agent_loop/: cache.rs  compaction_summary.rs  config.rs  context.rs  context_contents.rs  continuation.rs  event_sink.rs  mod.rs  parity_tests.rs  pipeline_tests.rs  run.rs  sampling.rs  search_cache.rs  shamir_replay_tests.rs  state.rs  stop_reason.rs  stream_pump.rs  streaming.rs  streaming_tests.rs  task.rs  tests.rs  tests_advanced.rs  tool_execution.rs  tool_execution_tests.rs  tool_pipeline.rs  transport.rs  turn.rs  turn_diff.rs
crates/aura-agent/src/agent_runner/: mod.rs  tests.rs
crates/aura-agent/src/blocking/: stall.rs
crates/aura-agent/src/compaction/: mod.rs
crates/aura-agent/src/events/: mapper.rs  types.rs
crates/aura-agent/src/file_ops/: error_context.rs
crates/aura-agent/src/kernel_domain_gateway/: handle.rs  routes.rs  tests.rs
crates/aura-agent/src/prompt_resolve/: fs_workspace.rs  mod.rs  tests.rs
crates/aura-agent/src/prompts/: context.rs  enrichment.rs  guardrail_tests.rs  mod.rs
crates/aura-agent/src/runtime/: mod.rs
crates/aura-agent/src/session/: goal_runtime.rs  input_queue.rs  mod.rs
crates/aura-agent/src/task_executor/: handlers.rs  mod.rs  tests.rs
crates/aura-agent/src/verify/: build.rs  error_types.rs  runner.rs  utils.rs
crates/aura-agent/tests/: transport_parity.rs
crates/aura-auth/: Cargo.toml
crates/aura-auth/src/: credentials.rs  lib.rs
crates/aura-automaton/: Cargo.toml
crates/aura-automaton/src/: context.rs  error.rs  events.rs  lib.rs  runtime.rs  state.rs
crates/aura-automaton/src/builtins/: chat.rs  mod.rs  noop_executor.rs  spec_gen.rs  task_refinement.rs  task_run.rs
crates/aura-compaction/: Cargo.toml
crates/aura-compaction/src/: lib.rs  messages.rs
crates/aura-config/: Cargo.toml
crates/aura-config/src/: agent.rs  automaton.rs  compaction.rs  env.rs  fleet.rs  lib.rs  prompts.rs  reasoner.rs  steering.rs  thinking.rs  tools.rs  verify.rs
crates/aura-context-compaction/: Cargo.toml
crates/aura-context-compaction/src/: lib.rs  messages.rs  tools.rs
crates/aura-context-memory/: Cargo.toml
crates/aura-context-memory/examples/: continuity_eval.rs
crates/aura-context-memory/src/: concurrency_tests.rs  consolidation.rs  error.rs  extraction.rs  lib.rs  manager.rs  procedure_tests.rs  procedures.rs  refinement.rs  retrieval.rs  retriever_tests.rs  safety.rs  salience.rs  store.rs  store_tests.rs  test_kernel.rs  types.rs  write_pipeline.rs
crates/aura-context-memory/tests/: turn_summary_roundtrip.rs
crates/aura-context-prompts/: Cargo.toml
crates/aura-context-prompts/src/: lib.rs
crates/aura-context-prompts/src/bootstrap/: header.rs
crates/aura-context-prompts/tests/: no_upstream_imports.rs
crates/aura-context-skills/: Cargo.toml
crates/aura-context-skills/src/: activation.rs  error.rs  install.rs  integration_tests.rs  lib.rs  loader.rs  manager.rs  parser.rs  prompt.rs  registry.rs  types.rs
crates/aura-core/: Cargo.toml
crates/aura-core-auth/: Cargo.toml
crates/aura-core-auth/src/: lib.rs
crates/aura-core-modes/: Cargo.toml
crates/aura-core-modes/src/: capability_profile.rs  gate.rs  lib.rs  modes.rs  profile.rs  violation.rs
crates/aura-core-permissions/: Cargo.toml
crates/aura-core-permissions/src/: capability.rs  effective.rs  grants.rs  lib.rs  math.rs  scope.rs  tests.rs
crates/aura-core-protocol/: Cargo.toml
crates/aura-core-protocol/src/: lib.rs
crates/aura-core-types/: Cargo.toml
crates/aura-core-types/src/: hash.rs  ids.rs  lib.rs  registry.rs  serde_helpers.rs
crates/aura-core/src/: lib.rs  time.rs
crates/aura-engine/: Cargo.toml
crates/aura-engine/src/: capabilities.rs  child_runner.rs  executor.rs  jwt_domain.rs  lib.rs  memory_observer.rs  model_context.rs  scheduler.rs  worker.rs
crates/aura-exec-conflict/: Cargo.toml
crates/aura-exec-conflict/src/: lib.rs
crates/aura-exec-conflict/tests/: conflict_domain.rs
crates/aura-exec-isolation/: Cargo.toml
crates/aura-exec-isolation/src/: lib.rs
crates/aura-exec-isolation/tests/: isolation_worktree.rs
crates/aura-exec-policy/: Cargo.toml
crates/aura-exec-policy/src/: lib.rs
crates/aura-exec-runner/: Cargo.toml
crates/aura-exec-runner/src/: lib.rs
crates/aura-exec-sandbox/: Cargo.toml
crates/aura-exec-sandbox/src/: lib.rs
crates/aura-exec-tools/: Cargo.toml
crates/aura-exec-tools/src/: lib.rs
crates/aura-exec-traits/: Cargo.toml
crates/aura-exec-traits/src/: executor.rs  lib.rs  spawn_hook.rs
crates/aura-fleet-daemon/: Cargo.toml
crates/aura-fleet-daemon/src/: lib.rs
crates/aura-fleet-daemon/tests/: mode_resolution_priority.rs
crates/aura-fleet-dispatch/: Cargo.toml
crates/aura-fleet-dispatch/src/: lib.rs
(+505 files in other folders)
