[package]
name = "aura"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "aura"
path = "src/main.rs"

[dependencies]
aura-terminal = { path = "crates/aura-terminal" }
aura-core = { path = "crates/aura-core" }
aura-kernel = { path = "crates/aura-kernel" }
aura-store = { path = "crates/aura-store" }
aura-reasoner = { path = "crates/aura-reasoner" }
aura-tools = { path = "crates/aura-tools" }
aura-agent = { path = "crates/aura-agent" }
aura-memory = { path = "crates/aura-memory" }
aura-auth = { path = "crates/aura-auth" }
aura-runtime = { path = "crates/aura-runtime" }
aura-config = { path = "crates/aura-config" }
aura-plugin-core = { path = "crates/aura-plugin-core" }
anyhow = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
colored = { workspace = true }
rpassword = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }

[workspace]
resolver = "2"
members = [
    "crates/aura-core",
    "crates/aura-core-modes",
    "crates/aura-core-permissions",
    "crates/aura-core-types",
    "crates/aura-core-protocol",
    "crates/aura-core-auth",
    "crates/aura-config",
    # Phase 3 context layer crates + shells
    "crates/aura-prompts",
    "crates/aura-context-prompts",
    "crates/aura-compaction",
    "crates/aura-context-compaction",
    "crates/aura-memory",
    "crates/aura-context-memory",
    "crates/aura-skills",
    "crates/aura-context-skills",
    # Phase 2 store layer
    "crates/aura-store",
    "crates/aura-store-db",
    "crates/aura-store-record",
    "crates/aura-store-snapshot",
    "crates/aura-tools",
    # Phase 5 exec layer split:
    #   aura-exec-conflict  — domain-scoped advisory locks
    #   aura-exec-isolation — worktree / copy isolation primitives
    #   aura-exec-policy    — verdict over EffectivePermissions
    #   aura-exec-sandbox   — FsSandbox + ProcessSandbox primitives
    #   aura-exec-tools     — Tool trait + builtin catalog (re-export shell)
    #   aura-exec-runner    — ToolExecutor + orchestration (re-export shell)
    "crates/aura-exec-conflict",
    "crates/aura-exec-isolation",
    "crates/aura-exec-policy",
    "crates/aura-exec-sandbox",
    "crates/aura-exec-tools",
    "crates/aura-exec-runner",
    # Phase 3 model layer crate + shell
    "crates/aura-reasoner",
    "crates/aura-model-reasoner",
    "crates/aura-kernel",
    # Phase 6a agent layer split:
    #   aura-agent-kernel    - deterministic kernel (renamed from aura-kernel)
    #   aura-agent-loop      - agent turn-loop entrypoint shell
    #   aura-agent-steering  - turn-state steering evaluators
    #   aura-agent-subagent  - subagent derivation + inheritance
    "crates/aura-agent-kernel",
    "crates/aura-agent-loop",
    "crates/aura-agent-subagent",
    "crates/aura-terminal",
    "crates/aura-agent",
    "crates/aura-agent-steering",
    "crates/aura-auth",
    "crates/aura-automaton",
    "crates/aura-runtime",
    "crates/aura-protocol",
    # Phase 4b plugin layer (in-process API + on-disk manifest pipeline)
    "crates/aura-plugin-api",
    "crates/aura-plugin-core",
    # Phase 4c plugin runtime surfaces (hook engine + MCP + connectors).
    # No agent-loop wiring yet; Phase 8 lands the consumer side.
    "crates/aura-plugin-hooks",
    "crates/aura-plugin-mcp",
    "crates/aura-plugin-connectors",
]

[profile.dev]
debug = 0

[profile.test]
debug = 0

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
license = "MIT"
repository = "https://github.com/aura/aura_os"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = "0.30"
crossterm = "0.28"

# Hashing
blake3 = "1.5"

# YAML
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "limit"] }
tower_governor = { version = "0.5", features = ["axum"] }
governor = "0.8"

# Storage
rocksdb = "0.22"

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
tempfile = "3.10"
proptest = "1.4"
tokio-tungstenite = "0.26"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Futures
futures-util = "0.3"

# Bytes
bytes = "1.5"

# Hex encoding
hex = "0.4"

# Base64 encoding
base64 = "0.22"

# Directories
dirs = "5.0"

# CLI / TTY helpers
colored = "2.1"
rpassword = "5.0"
rustyline = "14.0"

# Terminal size detection for log wrap
terminal_size = "0.4"

# Environment / config loading
dotenvy = "0.15.7"

# Async traits / utilities
async-trait = "0.1"

# Windows-friendly binary discovery
which = "7"

# Embedded PTY (terminal spawning)
portable-pty = "0.8"

# Unicode display width
unicode-width = "0.2"

# Filesystem traversal / matching
walkdir = "2.5"
glob = "0.3"
regex = "1.11"

# Config parsing (skills, workflows)
toml = "0.8"

# Cross-platform credential storage (DPAPI / Keychain / libsecret)
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }

# Lazy statics (used for default HTTP client initialization)
once_cell = "1.19"

[dev-dependencies]
aura-runtime = { path = "crates/aura-runtime", features = ["test-support"] }
aura-config = { path = "crates/aura-config" }
aura-core = { path = "crates/aura-core" }
aura-kernel = { path = "crates/aura-kernel" }
aura-store = { path = "crates/aura-store" }
aura-reasoner = { path = "crates/aura-reasoner" }
aura-agent = { path = "crates/aura-agent" }
aura-automaton = { path = "crates/aura-automaton" }
aura-tools = { path = "crates/aura-tools" }
aura-protocol = { path = "crates/aura-protocol" }
async-trait = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
bytes = { workspace = true }
futures = "0.3"
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
tower = { workspace = true }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Full `pedantic` / `nursery` groups remain deferred — they produce ~230
# findings across legacy modules that are better addressed by the Wave 6
# module-splits than sprayed with `#[allow]`s. The curated subset below
# is the Wave 4 stretch: each lint is individually enforceable, has few
# findings in the current tree, and catches real bugs.
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
# Curated pedantic set re-enabled in Wave 4 stretch. Each lint here is
# independently valuable and has zero or near-zero findings after the
# Wave 1–3 cleanups. If a lint starts flaring (>20 findings) during
# Wave 5/6 work, prefer fixing rather than suppressing.
needless_pass_by_value = "warn"
ref_option = "warn"
manual_let_else = "warn"
semicolon_if_nothing_returned = "warn"
map_unwrap_or = "warn"
unnecessary_wraps = "warn"
if_not_else = "warn"
from_iter_instead_of_collect = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
