[package]
name = "aura"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "aura"
path = "src/main.rs"

# Phase 10 carve-out 1: the binary body migration moves every
# line of useful logic out of `src/main.rs` and into
# `aura_surface_cli::run`. The root binary now depends on the
# surface-layer composition root and only the minimum set of
# crates needed to call `aura_surface_cli::run().await`.
[dependencies]
aura-surface-cli = { path = "crates/aura-surface-cli" }
anyhow = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }

[workspace]
resolver = "2"
members = [
    "crates/aura-core-modes",
    "crates/aura-core-permissions",
    "crates/aura-core-types",
    "crates/aura-core-protocol",
    "crates/aura-core-auth",
    "crates/aura-config",
    # Phase 3 context layer crates
    "crates/aura-context-prompts",
    "crates/aura-context-compaction",
    "crates/aura-context-memory",
    "crates/aura-context-skills",
    # Phase 2 store layer
    "crates/aura-store-db",
    "crates/aura-store-record",
    "crates/aura-store-snapshot",
    "crates/aura-tools",
    # Phase 5 exec layer split:
    #   aura-exec-conflict  — domain-scoped advisory locks
    #   aura-exec-isolation — worktree / copy isolation primitives
    #   aura-exec-policy    — verdict over EffectivePermissions
    #   aura-exec-sandbox   — FsSandbox + ProcessSandbox primitives
    #   aura-exec-tools     — Tool trait + builtin catalog (re-export shell)
    #   aura-exec-runner    — ToolExecutor + orchestration (re-export shell)
    "crates/aura-exec-conflict",
    "crates/aura-exec-isolation",
    "crates/aura-exec-policy",
    "crates/aura-exec-sandbox",
    "crates/aura-exec-tools",
    "crates/aura-exec-runner",
    # Phase 1 refactor: exec-layer executor/spawn traits relocated out
    # of aura-agent-kernel so aura-tools no longer depends upward.
    "crates/aura-exec-traits",
    # Phase 3 model layer crate
    "crates/aura-model-reasoner",
    # Phase 6a agent layer split:
    #   aura-agent-kernel    - deterministic kernel (renamed from aura-kernel)
    #   aura-agent-loop      - agent turn-loop entrypoint shell
    #   aura-agent-steering  - turn-state steering evaluators
    #   aura-agent-subagent  - subagent derivation + inheritance
    "crates/aura-agent-kernel",
    "crates/aura-agent-loop",
    "crates/aura-agent-subagent",
    "crates/aura-terminal",
    "crates/aura-agent",
    "crates/aura-agent-steering",
    "crates/aura-auth",
    "crates/aura-automaton",
    # Phase B / Commit 3 surface-layer extraction: the orchestration
    # engine (scheduler / worker / automaton bridge / memory observer /
    # capabilities / executor / RuntimeChildRunner) lives in
    # `aura-engine`; `aura-runtime` is shrinking toward the gateway-only
    # composition root.
    "crates/aura-engine",
    # Phase C / Commit 4 surface-layer extraction: HTTP `DomainApi`
    # implementation (formerly `aura-runtime::domain`) plus the
    # JWT-injecting wrapper (formerly `aura-engine::jwt_domain`) live
    # here so the gateway crate no longer owns domain HTTP logic.
    "crates/aura-domain-http",
    "crates/aura-runtime",
    "crates/aura-protocol",
    # Phase 4b plugin layer (in-process API + on-disk manifest pipeline)
    "crates/aura-plugin-api",
    "crates/aura-plugin-core",
    # Phase 4c plugin runtime surfaces (hook engine + MCP + connectors).
    # No agent-loop wiring yet; Phase 8 lands the consumer side.
    "crates/aura-plugin-hooks",
    "crates/aura-plugin-mcp",
    "crates/aura-plugin-connectors",
    # Phase 7a fleet layer + Phase 7b additions:
    #   aura-fleet-registry — RwLock<HashMap<AgentId, AgentSlot>>
    #   aura-fleet-quota    — QuotaPool + BudgetTicket (Phase 7b enforces)
    #   aura-fleet-spawn    — FleetSpawner + ParentLeaseRegistry + orphans
    #   aura-fleet-dispatch — FleetDispatcher (mailbox-fed in 7b)
    #   aura-fleet-mailbox  — bounded mpsc mailbox over AgentJob (Phase 7b)
    #   aura-fleet-daemon   — composition root wiring all five
    "crates/aura-fleet-registry",
    "crates/aura-fleet-quota",
    "crates/aura-fleet-spawn",
    "crates/aura-fleet-dispatch",
    "crates/aura-fleet-mailbox",
    "crates/aura-fleet-daemon",
    # Phase B / Commit 3 / Step 3a: fleet-layer concrete
    # SubagentDispatchHook impl. Was `RuntimeSubagentDispatch` in
    # aura-runtime; now sits at the fleet layer so the agent layer
    # (`aura-agent-subagent`) stays free of fleet deps.
    "crates/aura-fleet-subagent",
    # Phase 9 surface layer:
    #   aura-surface-cli       — CLI composition root + ModeFlag
    #   aura-surface-sdk       — external AuraClient/AuraSession SDK
    #   aura-surface-terminal  — TUI surface-layer shell + SlashModeCommand
    #   aura-surface-automaton — automaton host surface-layer shell
    #   aura-surface-auth      — zOS HTTP client + credential storage
    "crates/aura-surface-cli",
    "crates/aura-surface-sdk",
    "crates/aura-surface-terminal",
    "crates/aura-surface-automaton",
    "crates/aura-surface-auth",
]

[profile.dev]
debug = 0

[profile.test]
debug = 0

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
license = "MIT"
repository = "https://github.com/aura/aura_os"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = "0.30"
crossterm = "0.28"

# Hashing
blake3 = "1.5"

# YAML
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "limit"] }
tower_governor = { version = "0.5", features = ["axum"] }
governor = "0.8"

# Storage
rocksdb = "0.22"

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
tempfile = "3.10"
proptest = "1.4"
tokio-tungstenite = "0.26"
# Phase 7a: insta snapshot tests for the task-tool SubagentResult
# byte-identical shape pin (json + redactions for non-deterministic
# child agent ids).
insta = { version = "1.40", features = ["json", "redactions"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Futures
futures-util = "0.3"

# Bytes
bytes = "1.5"

# Hex encoding
hex = "0.4"

# Base64 encoding
base64 = "0.22"

# Directories
dirs = "5.0"

# CLI / TTY helpers
colored = "2.1"
rpassword = "5.0"
rustyline = "14.0"

# Terminal size detection for log wrap
terminal_size = "0.4"

# Environment / config loading
dotenvy = "0.15.7"

# Async traits / utilities
async-trait = "0.1"

# Windows-friendly binary discovery
which = "7"

# Embedded PTY (terminal spawning)
portable-pty = "0.8"

# Unicode display width
unicode-width = "0.2"

# Filesystem traversal / matching
walkdir = "2.5"
glob = "0.3"
regex = "1.11"

# Config parsing (skills, workflows)
toml = "0.8"

# Cross-platform credential storage (DPAPI / Keychain / libsecret)
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }

# Lazy statics (used for default HTTP client initialization)
once_cell = "1.19"

# Sealed state-at-rest (Swarm TEE upgrade phase 5)
aes-gcm = "0.10"
zeroize = "1"

[dev-dependencies]
aura-runtime = { path = "crates/aura-runtime", features = ["test-support"] }
aura-config = { path = "crates/aura-config" }
aura-agent-kernel = { path = "crates/aura-agent-kernel" }
aura-store-db = { path = "crates/aura-store-db" }
aura-model-reasoner = { path = "crates/aura-model-reasoner" }
aura-agent = { path = "crates/aura-agent" }
aura-automaton = { path = "crates/aura-automaton" }
aura-tools = { path = "crates/aura-tools" }
aura-protocol = { path = "crates/aura-protocol" }
# Phase 9 SDK smoke test (`tests/sdk_smoke.rs`) consumes the
# external `aura-surface-sdk` crate from this workspace's root test
# harness, so the SDK type surface is verified from an out-of-crate
# perspective.
aura-surface-sdk = { path = "crates/aura-surface-sdk" }
aura-core-modes = { path = "crates/aura-core-modes" }
aura-core-protocol = { path = "crates/aura-core-protocol" }
# Phase 9 daemon-shutdown integration test
# (`tests/daemon_shutdown.rs`) wires the fleet daemon, mailbox,
# spawner, and orphan store from the root harness.
aura-fleet-daemon = { path = "crates/aura-fleet-daemon" }
aura-fleet-spawn = { path = "crates/aura-fleet-spawn" }
aura-fleet-registry = { path = "crates/aura-fleet-registry" }
aura-store-record = { path = "crates/aura-store-record" }
aura-core-types = { path = "crates/aura-core-types" }
aura-core-permissions = { path = "crates/aura-core-permissions" }
aura-agent-subagent = { path = "crates/aura-agent-subagent" }
# Phase 10 carve-out 1: the root binary no longer holds these deps
# directly (its body lives in `aura-surface-cli`), but the legacy
# `tests/proptest_tests.rs`, `tests/e2e_*.rs` integration tests at
# the root harness still consume the agent/terminal/auth surfaces
# directly. Promoting them to dev-deps keeps the binary surface
# slim without dropping the existing test coverage.
aura-auth = { path = "crates/aura-auth" }
aura-terminal = { path = "crates/aura-terminal" }
axum = { workspace = true }
tokio-util = { workspace = true }
parking_lot = { workspace = true }
# Phase 9 golden CLI help-text snapshot test
# (`tests/cli_golden.rs`) uses `insta` to pin the `--help` output
# of every documented `aura ...` subcommand.
insta = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
bytes = { workspace = true }
futures = "0.3"
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
tower = { workspace = true }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Full `pedantic` / `nursery` groups remain deferred — they produce ~230
# findings across legacy modules that are better addressed by the Wave 6
# module-splits than sprayed with `#[allow]`s. The curated subset below
# is the Wave 4 stretch: each lint is individually enforceable, has few
# findings in the current tree, and catches real bugs.
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
# Curated pedantic set re-enabled in Wave 4 stretch. Each lint here is
# independently valuable and has zero or near-zero findings after the
# Wave 1–3 cleanups. If a lint starts flaring (>20 findings) during
# Wave 5/6 work, prefer fixing rather than suppressing.
needless_pass_by_value = "warn"
ref_option = "warn"
manual_let_else = "warn"
semicolon_if_nothing_returned = "warn"
map_unwrap_or = "warn"
unnecessary_wraps = "warn"
if_not_else = "warn"
from_iter_instead_of_collect = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
