[package]
name = "aura-agent-subagent"
description = "Subagent derivation + inheritance (Phase 6a)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-core-modes = { path = "../aura-core-modes" }
aura-core-permissions = { path = "../aura-core-permissions" }
aura-core-types = { path = "../aura-core-types" }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
