[package]
name = "aura-agent-subagent"
description = "Subagent derivation + inheritance (Phase 6a)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-core-modes = { path = "../aura-core-modes" }
aura-core-permissions = { path = "../aura-core-permissions" }
aura-core-types = { path = "../aura-core-types" }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

# Phase 9: `aura-core-types` and `uuid` are pulled in for the
# Phase-7b override surface that lands in subsequent migration
# work; the type names are referenced from `aura-fleet-spawn`
# via re-export rather than directly in this crate's lib.rs.
[package.metadata.cargo-machete]
ignored = ["aura-core-types", "uuid"]

[lints]
workspace = true
