[package]
name = "aura-agent"
description = "Multi-step agentic orchestration layer for Aura"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-config = { path = "../aura-config" }
aura-prompts = { path = "../aura-prompts" }
aura-kernel = { path = "../aura-kernel" }
aura-agent-steering = { path = "../aura-agent-steering" }
aura-compaction = { path = "../aura-compaction" }
aura-reasoner = { path = "../aura-reasoner" }
aura-store = { path = "../aura-store" }
aura-tools = { path = "../aura-tools" }
aura-auth = { path = "../aura-auth" }
aura-plugin-hooks = { path = "../aura-plugin-hooks" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
async-trait = "0.1"
regex = "1"
walkdir = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
colored = { workspace = true }
terminal_size = { workspace = true }

[target.'cfg(windows)'.dependencies]
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# `dup_audit` tests capture `tracing` events with an in-memory
# `MakeWriter` to assert on the exact event payload without a global
# subscriber.
tracing-subscriber = { workspace = true }
# Layer E.3: stream pump tests use `tokio::test(start_paused = true)`
# + `tokio::time::advance` to deterministically drive timeouts and
# overlap windows without real wall-clock sleep (Rule 7.3). Both
# helpers live behind the `test-util` feature, which is NOT part of
# `tokio`'s `full` set so we opt in explicitly here.
tokio = { version = "1.35", features = ["test-util"] }

[lints]
workspace = true
