[package]
name = "aura-compaction"
description = "Phase 3 compatibility shell over aura-context-compaction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-context-compaction = { path = "../aura-context-compaction" }

[lints]
workspace = true
