[package]
name = "aura-config"
description = "Single-source-of-truth for agent behavior knobs and shared LLM env vars"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
# Phase 9: FleetConfig::default_mode carries an AgentMode primitive.
aura-core-modes = { path = "../aura-core-modes" }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
