[package]
name = "aura-context-compaction"
description = "Unified context compaction for the Aura agent loop (context layer)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-config = { path = "../aura-config" }
aura-reasoner = { path = "../aura-reasoner" }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
