[package]
name = "aura-context-memory"
description = "Per-agent memory and procedural knowledge system for Aura (context layer)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core-types = { path = "../aura-core-types" }
aura-store-db = { path = "../aura-store-db" }
aura-model-reasoner = { path = "../aura-model-reasoner" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rocksdb = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
