[package]
name = "aura-core-modes"
description = "Closed-enum mode primitives (AgentMode/KernelMode/SpawnMode/...) + ModeGate trait for Aura"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
