[package]
name = "aura-core-protocol"
description = "Wire protocol primitives (ProtocolVersion) — Phase 1 placeholder; full wire shapes live in aura-protocol during the split"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-core-types = { path = "../aura-core-types" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

# Phase 9: `aura-core-types` is held as a forward-compat dep
# (the rich wire shapes referenced in lib.rs docs migrate here in
# a follow-up phase; the types live in `aura-core-types` today).
[package.metadata.cargo-machete]
ignored = ["aura-core-types"]

[lints]
workspace = true
