[package]
name = "aura-core-types"
description = "Behavior-free IDs and wire shapes shared by every layer (Phase 1: new identifiers; remaining types re-exported via aura-core during the split)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-core-modes = { path = "../aura-core-modes" }
aura-core-permissions = { path = "../aura-core-permissions" }
serde = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
hex = "0.4"

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
