[package]
name = "aura-core"
description = "Core types, IDs, schemas, and serialization for Aura"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core-types = { path = "../aura-core-types" }

# Phase 9: `aura-core-types` is re-exported through this shell
# crate; cargo machete misses the use because it lives behind a
# `pub use aura_core_types::*;` line.
[package.metadata.cargo-machete]
ignored = ["aura-core-types"]

[lints]
workspace = true
